[package]
name = "brag-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.42"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }